[JBWS-4459] - (Unrelated) Adding a profile to support JDK 23+ build